# HttpArena

./: .gitignore  CHANGELOG.md  README.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark-pr.yml  benchmark.yml  pr-commands.yml  validate.yml
docker/: gcannon.Dockerfile
frameworks/actix/: meta.json
frameworks/actix-websocket/: Dockerfile
frameworks/aspnet-grpc/: meta.json
frameworks/aspnet-minimal/: AppData.cs  Handlers.cs  Program.cs  meta.json
frameworks/aspnet-minimal-aot/: Dockerfile  aspnet-minimal-aot.csproj
frameworks/aspnet-minimal-iouring/: Dockerfile  Handlers.cs  Models.cs  Program.cs
frameworks/aspnet-mvc/: TestController.cs
frameworks/bun/: meta.json  server.ts
frameworks/caddy/: handler.go  meta.json
frameworks/carno/: Dockerfile  meta.json  package.json  server.ts  tsconfig.json
frameworks/chi/: README.md  go.mod  main.go  meta.json
frameworks/deno/: main.ts  meta.json
frameworks/django/: meta.json  requirements.txt  urls.py  views.py
frameworks/drogon/: main.cc  meta.json
frameworks/echo/: main.go  meta.json
frameworks/elysia/: Dockerfile  entrypoint.sh  meta.json  package.json  server.ts
frameworks/express/: meta.json  server.js
frameworks/fastapi/: Dockerfile  app.py  launcher.py  meta.json  requirements.txt
frameworks/fastify/: meta.json  server.js
frameworks/fastpysgi/: app.py  meta.json
frameworks/fastpysgi-asgi/: app.py  meta.json
frameworks/fastpysgi-wsgi/: app.py  meta.json
frameworks/fiber/: main.go  meta.json
frameworks/flask/: app.py  gunicorn_conf.py  gunicorn_conf_ssl.py  meta.json
frameworks/frankenphp-trueasync/: meta.json
frameworks/genhttp/: meta.json
frameworks/gin/: main.go  meta.json
frameworks/gleam-mist/: meta.json
frameworks/go-fasthttp/: main.go  meta.json
frameworks/h2o/: CMakeLists.txt  Dockerfile  meta.json
frameworks/h2o-h3/: entrypoint.sh  meta.json
frameworks/h2o/src/: main.c
frameworks/helidon/: meta.json  pom.xml
frameworks/helidon-production/: Dockerfile  README.md  meta.json  pom.xml
frameworks/hono/: meta.json  server.js
frameworks/hono-bun/: meta.json  server.ts
frameworks/hyper/: Cargo.toml  Dockerfile  meta.json
frameworks/hyper/src/: main.rs
frameworks/koa/: meta.json  (+1 more)
frameworks/ntex/: Cargo.toml  meta.json
frameworks/ntex/src/: main.rs
frameworks/rocket/: Cargo.toml  Dockerfile  meta.json
frameworks/rocket/src/: main.rs
requests/: benchmark.proto  json-tls-rotate.lua  noise-badcl.raw  noise-badpath.raw  noise-binary.raw  noise-longheader.raw
scripts/: benchmark-all.sh  benchmark-lite-windows.sh  benchmark-lite.sh  benchmark-per-test.sh  benchmark-test.sh  benchmark.sh  compare.sh  grpc-stream-bench.sh  run.sh  validate-windows.sh  validate.sh
(+282 files in other folders)
