[package]
name = "httparena-ntex"
version = "0.1.0"
edition = "2021"

[dependencies]
ntex = { version = "3", features = ["tokio", "rustls"] }
ntex-bytes = "1"
mimalloc = { version = "0.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = { version = "0.4", features = ["release_max_level_off"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
rustls = "0.23"
rustls-pemfile = "2"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"
