[package]
name = "httparena-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num_cpus = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
panic = "abort"
